fix: fixed styles for Contacts block on mobile

--- a/theme/ItaliaTheme/Blocks/_contacts.scss
+++ b/theme/ItaliaTheme/Blocks/_contacts.scss
@@ -172,7 +172,7 @@
     }
   }
 
-  @media (max-width: #{map-get($grid-breakpoints, md)}) {
+  @media (max-width: #{map-get($grid-breakpoints, lg)}) {
     .card {
       .contact-info {
         .icon {
